--- a/csscode.css
+++ b/csscode.css
@@ -7,4 +7,8 @@ h1{
 body{
   line-height: 40px;
   font-size: 20px;
+  font-family:monospace;
+  font-weight: bolder;
+  background-image: url("back.png");
+  background-repeat: round;
 }
